2008-04-29  Graham Cobb  <g+770@cobb.uk.net>

	* start-xsisusb: Create Xsisusb startup script
